--- a/force-app/main/default/classes/EmailMessageHandler.cls
+++ b/force-app/main/default/classes/EmailMessageHandler.cls
@@ -1,6 +1,4 @@
 public class EmailMessageHandler {
-
-    // logic for processing Case
     public static void updateCaseStatus(List<EmailMessage> emailMessages) {
         Set<Id> caseIds = collectCaseIds(emailMessages);
         
@@ -9,9 +7,9 @@ public class EmailMessageHandler {
             
             // Query Cases and associated EmailMessages
             List<Case> cases = [SELECT Id, Status, Origin, CaseNumber,
-                                        (SELECT Id, Incoming, CreatedDate, Subject 
-                                         FROM EmailMessages 
-                                         ORDER BY CreatedDate DESC) 
+                                (SELECT Id, Incoming, CreatedDate, Subject, Headers 
+                                 FROM EmailMessages 
+                                 ORDER BY CreatedDate DESC) 
                                 FROM Case 
                                 WHERE Id IN :caseIds];
             
@@ -26,7 +24,7 @@ public class EmailMessageHandler {
             }
         }
     }
-
+    
     private static Set<Id> collectCaseIds(List<EmailMessage> emailMessages) {
         Set<Id> caseIds = new Set<Id>();
         
@@ -38,47 +36,30 @@ public class EmailMessageHandler {
         
         return caseIds;
     }
-
+    
     private static void processCase(Case c, Map<Id, Case> casesToUpdate) {
         System.debug('Processing case with ID: ' + c.Id);
-
+        
         if (!c.EmailMessages.isEmpty()) { // Ensure there are email messages
             EmailMessage latestEmail = c.EmailMessages[0]; // Fetch the most recent email
-
-            // If the case is in the 'New' status, it should be adjusted based on the first interaction
-            if (c.Status == 'New') {
-                if (!latestEmail.Incoming && !latestEmail.Subject.contains('New')) {
-                    // Outbound email (agent sends email)
-                    c.Status = 'Awaiting Customer Response';
-                    System.debug('Updating Case ID ' + c.Id + ' to Awaiting Customer Response');
-                } 
-                else if (latestEmail.Incoming) {
-                    // Inbound email (customer responds)
-                    c.Status = 'Customer Responded';
-                    System.debug('Updating Case ID ' + c.Id + ' to Customer Responded');
-                }
+            
+            
+            if (!latestEmail.Incoming && latestEmail.Headers != null && !latestEmail.Headers.contains('auto-generated')) { 
+                // Outbound email (agent sends email)
+                c.Status = 'Awaiting Customer Response';
+                System.debug('Updating Case ID ' + c.Id + ' to Awaiting Customer Response');
             } 
-            // Case is in 'Awaiting Customer Response' or 'Customer Responded'
-            else if (c.Status == 'Awaiting Customer Response') {
-                if (latestEmail.Incoming) {
-                    // Inbound email (customer responds)
-                    c.Status = 'Customer Responded';
-                    System.debug('Updating Case ID ' + c.Id + ' to Customer Responded');
-                }
-            }
-            else if (c.Status == 'Customer Responded') {
-                if (!latestEmail.Incoming && !latestEmail.Subject.contains('New')) {
-                    // Outbound email (agent sends email)
-                    c.Status = 'Awaiting Customer Response';
-                    System.debug('Updating Case ID ' + c.Id + ' to Awaiting Customer Response');
-                }
+            else if (latestEmail.Incoming  && c.Status == 'Awaiting Customer Response') {
+                // Inbound email (customer responds)
+                c.Status = 'Customer Responded';
+                System.debug('Updating Case ID ' + c.Id + ' to Customer Responded');
             }
             
             // Add the Case to the update map if it needs updating
             casesToUpdate.put(c.Id, c);
         }
     }
-
+    
     private static void updateCases(Map<Id, Case> casesToUpdate) {
         try {
             update casesToUpdate.values();
@@ -87,8 +68,4 @@ public class EmailMessageHandler {
             System.debug('Error updating cases: ' + e.getMessage());
         }
     }
-    
-    // logic for processing Lead
-    
- 
 }
