--- a/force-app/main/default/classes/MDEN_SWIFT.cls
+++ b/force-app/main/default/classes/MDEN_SWIFT.cls
@@ -1,10 +1,18 @@
+/*
+* ───────────────────────────────────────────────────────────────────────────────────────────────
+* Created by: Maxify Development Team
+* Created Date: 6th, April, 2025
+* Purpose: : The MDEN_SWIFT is responsible for getting the access token and making callout the data to the SWIFT service.
+* Owner :  Encalm
+*───────────────────────────────────────────────────────────────────────────────────────────────
+*/
 public class MDEN_SWIFT {
     private static final String PARTNER_AUTH_URL = 'https://swiftapi.digitalorder.in/partner_authentication';
     private static final String API_KEY = 'sfa879z16Ff7XIEtyu67Sii';
     private static final String USERNAME = 'encalm_swift_staging_user';
     private static final String PASSWORD = 'SwiftSFA_2025#2022@321';
 
-    public static String getAccessToken() {
+    public static String getAccessToken(String oppId) {
         HttpRequest req = new HttpRequest();
         req.setEndpoint(PARTNER_AUTH_URL);
         req.setMethod('POST');
@@ -23,7 +31,7 @@ public class MDEN_SWIFT {
             Map<String, Object> responseMap = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
             String accessToken = (String) responseMap.get('access_token');
             System.debug('Access Token ====> ' + accessToken);
-            callApiWithToken(accessToken);
+            callApiWithToken(accessToken, oppId);
             return accessToken;
         } else {
             System.debug('Error response: ' + res.getBody());
@@ -31,54 +39,118 @@ public class MDEN_SWIFT {
         }
     }
     // Step 2: Use the access token to call another API
-   public static void callApiWithToken(String accessToken) {
-        String apiEndpoint = 'https://swiftapi.digitalorder.in/v2/api/push_confirmed_bookings_new';  // Replace with actual endpoint
-       String body = '"{"payload":{"save_sale_order_post":{"sfa_booking_id":"12","sfa_booking_no":"D24083477","itinerary_no":"V61477720","service_type":"Departure","booking_date":"2025-03-2110:35:00","service_date":"2025-03-3111:45:00","travel_date":"2025-03-31","travel_sector":"Domestic","service_airport":"IndiraGandhiInternationalAirport","service_airport_code":"DEL","from_airport":"IndiraGandhiInternationalAirport","from_airport_code":"DEL","to_airport":"BijuPatnaikInternationalAirport","to_airport_code":"BBI","arrival_airline":"","arrival_flight":"","arrival_time":"","arrival_term":"","departure_airline":"AirIndia","departure_flight":"AI473","departure_time":"07:00","departure_term":"T3","no_of_adult":1,"no_of_children":1,"no_of_infants":0,"primary_product":"GOLD(DOM-DEP)","customer_sfa_id":"12","customer_name":"[40083761]PetronetLNGLimited","customer_mobile":"+919811799331","customer_email":"himanshumehta@petronetlng.in","customer_tag":"VIP1","booker_name":"HIMANSHUMEHTA","booker_mobile":"+919811799331","booker_email":"himanshumehta@petronetlng.in","salesperson_name":"SmitaRajput","salesperson_mobile":"","salesperson_email":"smita.rajput@encalm.com","placard_name":"Mr.NirajJha","placard_title":"Mr.","placard_first_name":"Niraj","placard_last_name":"Jha","placard_country_code":"+91","placard_mobile":"9650814908","placard_email":"niraj@gmail.com","instructions":"Needafemaleassociate","payment_method":"Cashonaccount","payment_ref_no":"UTR2304RT34567","API_KEY":"sfa879z16Ff7XIEtyu67Sii"},"sale_order_item_payload":[{"product_sfa_id":10617,"product_name":"SILVER(INT-ARR)(Adult)","product_qty":1},{"product_sfa_id":10617,"product_name":"SILVER(INT-ARR)(Child)","product_qty":1}],"sale_order_guest_payload":[{"guest_sfa_id":12,"guest_name":"Mr.AliceSmith","guest_age":33,"travel_class":"Economy","pnr_no":"PNR123","passport_no":"P12345","designation":"Director","preferences":"WantManishtoattend","country_code":"+91","mobile":"9876543210"},{"guest_sfa_id":13,"guest_name":"Mr.BobSmith","guest_age":10,"travel_class":"Economy","pnr_no":"PNR123","passport_no":"P312345","designation":"","preferences":"","country_code":"","mobile":""}],"sale_order_avaan_booking_payload":[{"avaan_sfa_id":1012,"avaan_booking_no":"AVB00987","avaan_bags":"1","avaan_weight":"30Kg","avaan_amount":"3000","avaan_booking_date":"2025-03-3111:45"}]}}"';
+ public static void callApiWithToken(String accessToken, String oppId) {
+     MDEN_SWIFT_API_Call.PayloadWrapper wrapper=  MDEN_SWIFT_API_Call.getOpportunity(oppId);
+    system.debug('-------------------------------------------'+wrapper.payload.save_sale_order_post.action_type);
+     if(wrapper.payload.save_sale_order_post.action_type == 'Cancel'){
+          String ENDPOINT = '/push_confirmed_bookings_cancel_full';
+             
+         String requestBody  = JSON.serialize(wrapper);
+System.debug('Serialized JSON: ' + requestBody);
+         redirectUrl(ENDPOINT, accessToken, requestBody);
 
-        Http http = new Http();
-        HttpRequest req = new HttpRequest();
-        req.setHeader('Authorization', 'Bearer ' + accessToken);
-        req.setEndpoint(apiEndpoint);  
-        req.setMethod('POST');
-        // req.setHeader('Content-Type','application/json;charset=UTF-8');
-        // req.setHeader('Content-Type','application/x-www-form-urlencoded');
-        req.setBody(body);
+     }
+     
+     
+    
+     
+     if(wrapper.payload.save_sale_order_post.action_type == 'Partially Cancelled'){
+         String requestBody  = JSON.serialize(wrapper);
+System.debug('Serialized JSON: ' + requestBody);
+     String ENDPOINT = '/push_confirmed_bookings_cancel_partial';
+redirectUrl(ENDPOINT, accessToken, requestBody);
+ 
+     }
+     
+     
+     if(wrapper.payload.save_sale_order_post.action_type == 'Modified/Rescheduled' ){
+              
+     String requestBody  = JSON.serialize(wrapper);
+System.debug('Serialized JSON: ' + requestBody);
+     String ENDPOINT = '/push_confirmed_bookings_modify_reschedule';
+     String BASE_URL = 'https://swiftapi.digitalorder.in/v2/api';
+redirectUrl(ENDPOINT, accessToken, requestBody);
+  
+     }
+     
+     if(wrapper.payload.save_sale_order_post.action_type == null || wrapper.payload.save_sale_order_post.action_type == '' ){ String requestBody  = JSON.serialize(wrapper);
+System.debug('Serialized JSON: ' + requestBody);
+     String ENDPOINT = '/push_confirmed_bookings_new';
+     String BASE_URL = 'https://swiftapi.digitalorder.in/v2/api';
+      redirectUrl(ENDPOINT, accessToken, requestBody);                                                                                                                       
+         }    
+}
+     
+    
+    public static void redirectUrl(String ENDPOINT, String accessToken,  String requestBody) {
+        
+     System.debug('Serialized JSON: ' + requestBody);
+    
+     String BASE_URL = 'https://swiftapi.digitalorder.in/v2/api';
+    Http http = new Http();
+    HttpRequest req = new HttpRequest();
+    req.setEndpoint(BASE_URL + ENDPOINT);
+    req.setMethod('POST');
+    req.setHeader('Authorization', 'Bearer ' + accessToken);
+    req.setHeader('Accept', 'application/json');
+    req.setBody(requestBody);
+           
+    HttpResponse res = http.send(req);
+    System.debug('Initial Status: -----------' + res.getStatusCode() + ', Body:------> ' + res.getBody());
+         
+         
+         
+         if (res.getStatusCode() == 307) {
+        String redirectUrl = res.getHeader('location');
+        System.debug('Redirecting to: ' + redirectUrl);
+for (String headerName : res.getHeaderKeys()) {
+    System.debug(headerName + ': ' + res.getHeader(headerName));
+}
+        if (redirectUrl != null) {
+            
+             HttpRequest redirectReq = new HttpRequest();
+    redirectReq.setEndpoint(redirectUrl);
+    redirectReq.setMethod('POST'); // ← keep it POST!
+    redirectReq.setHeader('Authorization', 'Bearer ' + accessToken);
+    redirectReq.setHeader('Accept', 'application/json');
+    redirectReq.setHeader('Content-Type', 'application/json'); // Add if required
+    // Optional: Add body if original request had one
+     redirectReq.setBody(requestBody);
 
- HttpResponse response = http.send(req);
-        system.debug('responseStatus--->'+response.getStatus());
-        system.debug('responseBody--->'+response.getBody());
+    HttpResponse redirectRes = http.send(redirectReq);
+    System.debug('Redirect Status: ' + redirectRes.getStatusCode());
+    System.debug('Redirect Response Body: ===>' + redirectRes.getBody());
        
-       
-        // Define the API endpoint you want to hit
-        // Set the request headers and parameters
-      /*  HttpRequest req = new HttpRequest();
-        req.setEndpoint(apiEndpoint);
-        req.setMethod('POST');  // Replace with POST, PUT, DELETE, etc., depending on your use case
-        req.setHeader('Authorization', 'Bearer ' + accessToken);
-        req.setHeader('API_KEY', API_KEY);
-           req.setBody(body);
-        // Make the HTTP request
-        Http http = new Http();
-        HttpResponse res = http.send(req);
-        // Create HTTP Request
-        HttpRequest req = new HttpRequest();
-        req.setEndpoint(apiEndpoint);
-        req.setMethod('POST');
-        req.setHeader('Authorization', 'Bearer ' + accessToken);
-        req.setHeader('Content-Type', 'application/json');
-      //  req.setHeader('API_KEY', payload.save_sale_order_post.API_KEY);
-        req.setBody(body);
 
-         // Send request
-        Http http = new Http();
-        HttpResponse res = http.send(req);
-
-        // Handle response
-        if (res.getStatusCode() == 200) {
-            System.debug('Success: ' + res.getBody());
+            if (redirectRes.getStatusCode() == 200) {
+                String responseBody = redirectRes.getBody();
+        System.debug('responseBody=============>'+responseBody);
+                if (responseBody != null) {
+                    try {
+                        Map<String, Object> responseMap = (Map<String, Object>) JSON.deserializeUntyped(responseBody);
+                        System.debug('Parsed Response: ' + responseMap);
+                    } catch (Exception e) {
+                        System.debug('JSON Parse Error: ' + e.getMessage());
+                    }
+                }
+            } else {
+                System.debug('Failed after redirect: ' + redirectRes.getStatusCode());
+            }
         } else {
-            System.debug('in else-----------');
-            System.debug('Error: ' + res.getStatusCode() + ' → ' + res.getBody());
-        }*/
+            System.debug('Redirect location header is missing!');
+        }
+    } else if (res.getStatusCode() == 200) {
+        // normal processing
+        try {
+            Map<String, Object> responseMap = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
+            System.debug('Parsed Response: ' + responseMap);
+        } catch (Exception e) {
+            System.debug('Error parsing JSON: ' + e.getMessage());
+        }
+    } else {
+        System.debug('API call failed. Status: ' + res.getStatus() + ', Body: ' + res.getBody());
     }
+     }
+    
+
 }
